--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 
 header {
-  background-color: var(--accent, #008000);                                  
+  background-color: var(--accent, #008000);  
+  color:#008000
   padding: 1rem;                                 
   text-align: center;
   border-bottom: 4px solid rgba(0,0,0,.15);        
