--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 
 header {
-  background-color: var(--accent, #008000);  
+  background-color: var(--accent, green);  
   color:#008000
   padding: 1rem;                                 
   text-align: center;
