--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 header {
   background-color: var(--accent, green);  
-  color:#008000
+  color:#008000;
   padding: 1rem;                                 
   text-align: center;
   border-bottom: 4px solid rgba(0,0,0,.15);        
