--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
   top: 0;                                 /* position */
   padding: 2rem;                          /* shorthand */
   border-bottom: 5px solid rgba(0, 0, 0, 0.5);  /* px */
-  position: absolute;
+  
 }
 
 
@@ -104,6 +104,7 @@ body {
   border: 1px solid hsl(0 0% 80%);
   padding: 1rem;                          /* shorthand */
   text-align: center;
+  position: relative;
 }
 
 
